Changed domain name to au

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Quality custom framing services with over 25 years experience in Melbourne. Comprehensive choice of frames for every picture with professional consultation and free quotation.">
 
   <title>Yarraville Picture Framing &ndash; Quality Custom Framing | Melbourne</title>
-  <link rel="canonical" href="https://yarravillepictureframing.com/">
+  <link rel="canonical" href="https://yarravillepictureframing.com.au">
   <link href="img/favicon.ico" rel="icon" type="image/x-icon" />
 
   <!-- Bootstrap -->
