Fixed DNM logo path to relative

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="container">
-      <img class="navbar-brand" src="/img/DNM.png">
+      <img class="navbar-brand" src="img/DNM.png">
       <a class="navbar-brand" href="#page-top">Yarraville Picture Framing</a>
       <div class="collapse navbar-collapse" id="navbarExample">
         <ul class="navbar-nav ml-auto">
