Fixed grammar, thx SL

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <h1 id="homeHeading">Yarraville&#8217;s Custom Framing</h1>
         <hr>
         <p>We are Melbourne&#8217;s specialist framers with over 25 years of experience.</p>
-        <p>We provide elegance and protection to your works of art, so it may be treasured for many years to come.</p>
+        <p>We provide elegance and protection to your works of art, so that it may be treasured for many years to come.</p>
         <a class="btn btn-primary btn-xl" href="#contact">Opening Hours</a>
       </div>
     </div>
