--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
             <p>Closed on public holidays</p>
             <hr>
             <p><i class="fa fa-phone"></i>&nbsp; <a href="tel:+61393149554">+61 3 9314 9554</a></p>
-            <p><i class="fa fa-envelope"></i>&nbsp; <a href="mailto:hello@yarravillepictureframing.com">hello@yarravillepictureframing.com</a></p>
+            <p><i class="fa fa-envelope"></i>&nbsp; <a href="mailto:hello@yarravillepictureframing.com.au">hello@yarravillepictureframing.com.au</a></p>
           </div>
         </div>
       </div>
