--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="container">
-      <img class="navbar-brand" src="img/DNM.png">
-      <a class="navbar-brand" href="#page-top">Yarraville Picture Framing</a>
+      <img class="navbar-brand" src="img/DNM.png"><a class="navbar-brand" href="#page-top">Yarraville Picture Framing</a>
       <div class="collapse navbar-collapse" id="navbarExample">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
@@ -66,11 +65,10 @@
   <header class="masthead">
     <div class="header-content">
       <div class="header-content-inner">
-        <h1 id="homeHeading">Yarraville&#8217;s Custom Framing</h1>
-        <hr>
+        <h1 id="homeHeading">Yarraville&#8217;s <span class="avoid-wrap">Custom Framing</span></h1>
         <p>We are Melbourne&#8217;s specialist framers with over 25 years of experience.</p>
         <p>We provide elegance and protection to your works of art, so that it may be treasured for many years to come.</p>
-        <a class="btn btn-primary btn-xl" href="#contact">Opening Hours</a>
+        <a class="btn btn-primary btn-xl" href="#address">Opening Hours</a>
       </div>
     </div>
   </header>
@@ -81,7 +79,6 @@
       <div class="row">
         <div class="col-lg-10 offset-lg-1 text-center">
           <h2 class="section-heading">Our Services</h2>
-          <hr>
           <p>We pride ourselves on delivering quality workmanship to preserve art to the highest standards.</p>
           <p>While providing the best value to our customers, we have all the materials and advice on how to protect and present your art so it can be appreciated by all.</p>
         </div>
@@ -267,7 +264,6 @@
       <div class="row">
         <div class="col-lg-10 offset-lg-1 text-center">
           <h2 class="section-heading">Contact Us</h2>
-          <hr>
           <p>Please give us a call or visit our store to see how we can help with your framing needs.</p>
           <p>We'd be delighted to give you advice and a quotation for any project from repairs to presenting your next artwork.</p>
         </div>
@@ -275,14 +271,8 @@
     </div>
     <div class="container-fluid map">
       <div class="row align-items-center">
-        <div class="col-lg-6 offset-lg-1">
-          <div class="map-cover" onClick="style.pointerEvents='none'"></div>
-          <div class="map-canvas">
-            <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyB0tGH_hL2U3OlIUz5LEF0-aaIoytVD2_w&q=Yarraville+Picture+Framing,+2%2F58+Anderson+St,+Yarraville+VIC+3013,+Australia"></iframe>
-          </div>
-        </div>
-        <div class="col-lg-4 text-center">
-          <div class="map-address">
+        <div class="col-lg-4 offset-lg-1 text-center">
+          <div id="address">
             <p><i class="fa fa-map-marker fa-3x"></i></p>
             <p><a href="https://www.google.com/maps?f=d&daddr=Yarraville+Picture+Framing,+2%2F58+Anderson+St,+Yarraville+VIC+3013,+Australia" target="_blank">2/58 Anderson Street<br>Yarraville VIC 3013</a></p>
             <p>Mon&ndash;Fri: 09:30&ndash;17:30<br>
@@ -291,6 +281,12 @@
             <hr>
             <p><i class="fa fa-phone"></i>&nbsp; <a href="tel:+61393149554">+61 3 9314 9554</a></p>
             <p><i class="fa fa-envelope"></i>&nbsp; <a href="mailto:hello@yarravillepictureframing.com.au">hello@yarravillepictureframing.com.au</a></p>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <div class="map-cover" onClick="style.pointerEvents='none'"></div>
+          <div class="map-canvas">
+            <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyB0tGH_hL2U3OlIUz5LEF0-aaIoytVD2_w&q=Yarraville+Picture+Framing,+2%2F58+Anderson+St,+Yarraville+VIC+3013,+Australia"></iframe>
           </div>
         </div>
       </div>
