--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="container">
-      <img class="navbar-brand" src="img/DNM.png"><a class="navbar-brand" href="#page-top">Yarraville Picture Framing</a>
+      <a href="#page-top"><img class="navbar-brand" src="img/DNM.png"></a><a class="navbar-brand navbar-title" href="#page-top">Yarraville Picture Framing</a>
       <div class="collapse navbar-collapse" id="navbarExample">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
