--- a/index.html
+++ b/index.html
@@ -314,6 +314,7 @@
   <script src="vendor/scrollreveal/scrollreveal.min.js"></script>
   <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
   <script src="vendor/headroom/headroom.min.js"></script>
+  <script src="vendor/headroom/jQuery.headroom.js"></script>
 
   <!-- Custom scripts -->
   <script src="js/creative.min.js"></script>
