Updated title for better SEO

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Quality custom framing services with over 25 years experience in Melbourne. Comprehensive choice of frames for every picture with professional consultation and free quotation.">
 
-  <title>Yarraville Picture Framing &ndash; Quality Custom Framing | Melbourne</title>
+  <title>Yarraville Picture Framing &ndash; Custom Framed Prints, Canvas & Memorabilia</title>
   <link rel="canonical" href="https://yarravillepictureframing.com.au">
   <link href="img/favicon.ico" rel="icon" type="image/x-icon" />
 
