--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       <div class="row no-gutter popup-gallery">
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="framed artwork hanging off the wall">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded"></div>
@@ -135,7 +135,7 @@
         </div>
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="img/portfolio/fullsize/2.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="photo with mat ready for framing">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded"></div>
@@ -146,7 +146,7 @@
         </div>
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="img/portfolio/fullsize/3.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="framed landscape painting">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded"></div>
@@ -157,7 +157,7 @@
         </div>
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="img/portfolio/fullsize/4.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/4.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/thumbnails/4.jpg" alt="desert artwork">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded"></div>
@@ -168,7 +168,7 @@
         </div>
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="img/portfolio/fullsize/5.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/5.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/thumbnails/5.jpg" alt="picture frame mouldings">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded"></div>
@@ -179,7 +179,7 @@
         </div>
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="img/portfolio/fullsize/6.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/6.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/thumbnails/6.jpg" alt="melbourne tram photo">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded"></div>
@@ -190,7 +190,7 @@
         </div>
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="img/portfolio/fullsize/7.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/7.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/thumbnails/7.jpg" alt="framed portrait of two women">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded"></div>
@@ -201,7 +201,7 @@
         </div>
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="img/portfolio/fullsize/8.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/8.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/thumbnails/8.jpg" alt="shop front window">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded"></div>
@@ -212,7 +212,7 @@
         </div>
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="img/portfolio/fullsize/9.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/9.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/thumbnails/9.jpg" alt="picture framer working">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded"></div>
@@ -223,7 +223,7 @@
         </div>
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="img/portfolio/fullsize/10.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/10.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/thumbnails/10.jpg" alt="artwork to be framed">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded"></div>
@@ -234,7 +234,7 @@
         </div>
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="img/portfolio/fullsize/11.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/11.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/thumbnails/11.jpg" alt="photo of elephant and newspaper masthead">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded"></div>
@@ -245,7 +245,7 @@
         </div>
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="img/portfolio/fullsize/12.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/12.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/thumbnails/12.jpg" alt="picture framing tools">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded"></div>
