Updated site content with more words

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Quality custom framing services with over 25 years experience in Melbourne. Comprehensive choice of frames for every picture with professional consultation and free quotation.">
+  <meta name="description" content="Quality custom framing in Melbourne. Comprehensive choice of frames for every picture with professional consultation.">
 
   <title>Yarraville Picture Framing &ndash; Custom Framed Prints, Canvas & Memorabilia</title>
   <link rel="canonical" href="https://yarravillepictureframing.com.au">
@@ -68,6 +68,7 @@
         <h1 id="homeHeading">Yarraville&#8217;s <span class="avoid-wrap">Custom Framing</span></h1>
         <p>We are Melbourne&#8217;s specialist framers with over 25 years of experience.</p>
         <p>We provide elegance and protection to your works of art, so that it may be treasured for many years to come.</p>
+        <p>Offering a comprehensive variety of frames and professional consultation for any framing project, including prints, photos, canvas, memorabilia items, and much more.</p>
         <a class="btn btn-primary btn-xl" href="#address">Opening Hours</a>
       </div>
     </div>
@@ -264,8 +265,7 @@
       <div class="row">
         <div class="col-lg-10 offset-lg-1 text-center">
           <h2 class="section-heading">Contact Us</h2>
-          <p>Please give us a call or visit our store to see how we can help with your framing needs.</p>
-          <p>We'd be delighted to give you advice and a quotation for any project from repairs to presenting your next artwork.</p>
+          <p>We'd be delighted to give you professional advice for any project from repairs to how to present your artwork.</p>
         </div>
       </div>
     </div>
