Updated meta description

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Quality custom framing in Melbourne. Comprehensive choice of frames for every picture with professional consultation.">
+  <meta name="description" content="Quality custom framing in Melbourne. Comprehensive choice of frames for every photo, print, canvas and embrioidery with professional consultation.">
 
   <title>Yarraville Picture Framing &ndash; Custom Framed Prints, Canvas & Memorabilia</title>
   <link rel="canonical" href="https://yarravillepictureframing.com.au">
@@ -91,7 +91,7 @@
           <div class="service-box">
             <i class="fa fa-4x fa-picture-o text-primary sr-icons"></i>
             <h3>Custom Framing</h3>
-            <p class="text-muted">We specialse in presenting prints, photos, canvas artwork, embroideries, certificates and limited-edition memorabilia.</p>
+            <p class="text-muted">We specialise in presenting prints, photos, canvas artwork, embroideries, certificates and limited-edition memorabilia.</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
