Updated meta description

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Quality custom framing in Melbourne. Comprehensive choice of frames for every photo, print, canvas and embrioidery with professional consultation.">
+  <meta name="description" content="Quality custom picture framing in Melbourne. Specialising in photos, prints, canvas and memorabilia framing with a comprehensive choice and friendly consultation.">
 
   <title>Yarraville Picture Framing &ndash; Custom Framed Prints, Canvas & Memorabilia</title>
   <link rel="canonical" href="https://yarravillepictureframing.com.au">
