Updated with fb info

--- a/index.html
+++ b/index.html
@@ -67,7 +67,6 @@
       <div class="header-content-inner">
         <h1 id="homeHeading">Yarraville&#8217;s <span class="avoid-wrap">Custom Framing</span></h1>
         <p>We are Melbourne&#8217;s specialist framers with over 25 years of experience.</p>
-        <p>We provide elegance and protection to your works of art, so that it may be treasured for many years to come.</p>
         <p>Offering a comprehensive variety of frames and professional consultation for any framing project, including prints, photos, canvas, memorabilia items, and much more.</p>
         <a class="btn btn-primary btn-xl" href="#address">Opening Hours</a>
       </div>
@@ -80,8 +79,7 @@
       <div class="row">
         <div class="col-lg-10 offset-lg-1 text-center">
           <h2 class="section-heading">Our Services</h2>
-          <p>We pride ourselves on delivering quality workmanship to preserve art to the highest standards.</p>
-          <p>While providing the best value to our customers, we have all the materials and advice on how to protect and present your art so it can be appreciated by all.</p>
+          <p>We provide elegance and protection to your works of art, so that it may be treasured for many years to come.</p>
         </div>
       </div>
     </div>
@@ -280,6 +278,7 @@
             <p>Closed on public holidays</p>
             <hr>
             <p><i class="fa fa-phone"></i>&nbsp; <a href="tel:+61393149554">+61 3 9314 9554</a></p>
+            <p><i class="fa fa-facebook-square"></i>&nbsp; <a href="https://www.facebook.com/yarravillepictureframing/">@yarravillepictureframing</a></p>
             <p><i class="fa fa-envelope"></i>&nbsp; <a href="mailto:hello@yarravillepictureframing.com.au">hello@yarravillepictureframing.com.au</a></p>
           </div>
         </div>
