Updated contact button link

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <h1 id="homeHeading">Yarraville&#8217;s <span class="avoid-wrap">Custom Framing</span></h1>
         <p>We are Melbourne&#8217;s specialist framers with over 25 years of experience.</p>
         <p>Offering a comprehensive variety of frames and professional consultation for any framing project, including prints, photos, canvas, memorabilia items, and much more.</p>
-        <a class="btn btn-primary btn-xl" href="#address">Opening Hours</a>
+        <a class="btn btn-primary btn-xl" href="#contact">Opening Hours</a>
       </div>
     </div>
   </header>
