Added COVID19 notice

--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
 
 <body id="page-top">
 
+  <!-- Notice -->
+  <div class="notice">
+    <p>Please note we are currently closed due to Victorian government COVID-19 business trading restrictions.</p>
+    <p>Please keep your prints, artwork and yourself safe until this is all over and we can help serve you once again.</p>
+    <p>We thank you for your continued support of our local business.</p>
+  </div>
+
+
   <!-- Navigation -->
   <nav class="navbar fixed-top navbar-toggleable-md navbar-light" id="mainNav">
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarExample" aria-controls="navbarExample" aria-expanded="false" aria-label="Toggle navigation">
