--- a/index.html
+++ b/index.html
@@ -38,14 +38,6 @@
 
 <body id="page-top">
 
-  <!-- Notice -->
-  <div class="notice">
-    <p>Please note we are currently closed due to Victorian government COVID-19 business trading restrictions.</p>
-    <p>Please keep your prints, artwork and yourself safe until this is all over and we can help serve you once again.</p>
-    <p>We thank you for your continued support of our local business.</p>
-  </div>
-
-
   <!-- Navigation -->
   <nav class="navbar fixed-top navbar-toggleable-md navbar-light" id="mainNav">
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarExample" aria-controls="navbarExample" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,6 +45,14 @@
     </button>
     <div class="container">
       <a href="#page-top"><img class="navbar-brand" src="img/DNM.png"></a><a class="navbar-brand navbar-title" href="#page-top">Yarraville Picture Framing</a>
+
+      <!-- Notice -->
+      <div class="notice">
+        <p><b>We're currently closed due to Victorian government COVID-19 business trading restrictions.</b></p>
+        <p><small>Please keep yourself, prints and artwork safe until this is over and we can help serve you again.<small></p>
+        <p><small>We thank you for your continued support of our local business.<small></p>
+      </div>
+
       <div class="collapse navbar-collapse" id="navbarExample">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
