Finalised covid message

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Quality custom picture framing in Melbourne. Specialising in photos, prints, canvas and memorabilia framing with a comprehensive choice and friendly consultation.">
@@ -33,7 +32,6 @@
     ga('require', 'linkid');
     ga('send', 'pageview');
   </script>
-
 </head>
 
 <body id="page-top">
@@ -62,7 +60,7 @@
             <a class="nav-link" href="#portfolio">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#contact">Contact Us</a>
+            <a class="nav-link" href="#contact">Contact</a>
           </li>
         </ul>
       </div>
@@ -71,6 +69,8 @@
 
   <!-- Header -->
   <header class="masthead">
+
+  <!-- Notice -->
     <div class="header-content">
       <div class="header-content-inner">
         <h1 id="homeHeading">Yarraville&#8217;s <span class="avoid-wrap">Custom Framing</span></h1>
