--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Quality custom picture framing in Melbourne. Specialising in photos, prints, canvas and memorabilia framing with a comprehensive choice and friendly consultation.">
+  <meta name="description" content="Custom picture framing in the inner-western Melbourne suburbs. Specialising in a comprehensive choice of frames and professional consultation for any artwork, photos or prints.">
 
   <title>Yarraville Picture Framing &ndash; Custom Framed Prints, Canvas & Memorabilia</title>
   <link rel="canonical" href="https://yarravillepictureframing.com.au">
@@ -66,8 +66,9 @@
     <div class="header-content">
       <div class="header-content-inner">
         <h1 id="homeHeading">Yarraville&#8217;s <span class="avoid-wrap">Custom Framing</span></h1>
-        <p>We are Melbourne&#8217;s specialist framers with over 25 years of experience.</p>
-        <p>Offering a comprehensive variety of frames and professional consultation for any framing project, including prints, photos, canvas, memorabilia items, and much more.</p>
+        <p>We are Melbourne&#8217;s specialist framers serving the community for over 25 years.</p>
+        <p>Offering a comprehensive variety of frames and professional consultation for any framing project, including prints, photos, canvas, memorabilia items, and more.</p>
+        <p>Visit us for a professional consultation on how to best frame and protect your work.</p>
         <a class="btn btn-primary btn-xl" href="#contact">Opening Hours</a>
       </div>
     </div>
