Updated COVID message

--- a/index.html
+++ b/index.html
@@ -47,9 +47,8 @@
       <!-- Notice -->
 <!--
       <div class="notice">
-        <p><b>We're currently closed due to Victorian government COVID-19 business trading restrictions.</b></p>
-        <p><small>Please keep yourself, prints and artwork safe until this is over and we can help serve you again.<small></p>
-        <p><small>We thank you for your continued support of our local business.<small></p>
+        <p><b>We're currently open for drop-off and pick-up from 10:00&endash;16:00 on weekdays, in line with Victorian government COVID guidelines.</b></p>
+        <p><small>Thank you for your continued support of our local business.<small></p>
       </div>
 -->
 
@@ -284,8 +283,14 @@
           <div id="address">
             <p><i class="fa fa-map-marker fa-3x"></i></p>
             <p><a href="https://www.google.com/maps?f=d&daddr=Yarraville+Picture+Framing,+2%2F58+Anderson+St,+Yarraville+VIC+3013,+Australia" target="_blank">2/58 Anderson Street<br>Yarraville VIC 3013</a></p>
+<!--
             <p>Mon&ndash;Fri: 09:30&ndash;17:30<br>
             Saturday: 09:30&ndash;13:00</p>
+            <p>Closed on public holidays</p>
+-->
+            <p><em>Temporary COVID service changes</em></p>
+            <p>Mon&ndash;Fri: 10:00&ndash;16:00<br>
+            Saturday: Temporarily closed</p>
             <p>Closed on public holidays</p>
             <hr>
             <p><i class="fa fa-phone"></i>&nbsp; <a href="tel:+61393149554">+61 3 9314 9554</a></p>
