Updated COVID message

--- a/index.html
+++ b/index.html
@@ -45,12 +45,10 @@
       <a href="#page-top"><img class="navbar-brand" src="img/DNM.png"></a><a class="navbar-brand navbar-title" href="#page-top">Yarraville Picture Framing</a>
 
       <!-- Notice -->
-<!--
       <div class="notice">
-        <p><b>We're currently open for drop-off and pick-up from 10:00&endash;16:00 on weekdays, in line with Victorian government COVID guidelines.</b></p>
+        <p><b>We're open for pick up and drop off of frames from 10:00&endash;16:00 weekdays, in line with COVID-safe guidelines.</b></p>
         <p><small>Thank you for your continued support of our local business.<small></p>
       </div>
--->
 
       <div class="collapse navbar-collapse" id="navbarExample">
         <ul class="navbar-nav ml-auto">
@@ -273,7 +271,7 @@
       <div class="row">
         <div class="col-lg-10 offset-lg-1 text-center">
           <h2 class="section-heading">Contact Us</h2>
-          <p>We'd be delighted to give you professional advice for any project from repairs to how to present your artwork.</p>
+          <p>We'd be delighted to give you a free quote and professional advice for any project from repairs to how to present your artwork.</p>
         </div>
       </div>
     </div>
@@ -288,14 +286,14 @@
             Saturday: 09:30&ndash;13:00</p>
             <p>Closed on public holidays</p>
 -->
-            <p><em>Temporary COVID service changes</em></p>
+            <p><em>Temporary COVID opening hour changes</em></p>
             <p>Mon&ndash;Fri: 10:00&ndash;16:00<br>
             Saturday: Temporarily closed</p>
             <p>Closed on public holidays</p>
             <hr>
+            <p><i class="fa fa-envelope"></i>&nbsp; <a href="mailto:hello@yarravillepictureframing.com.au">hello@yarravillepictureframing.com.au</a></p>
             <p><i class="fa fa-phone"></i>&nbsp; <a href="tel:+61393149554">+61 3 9314 9554</a></p>
             <p><i class="fa fa-facebook-square"></i>&nbsp; <a href="https://www.facebook.com/yarravillepictureframing/">@yarravillepictureframing</a></p>
-            <p><i class="fa fa-envelope"></i>&nbsp; <a href="mailto:hello@yarravillepictureframing.com.au">hello@yarravillepictureframing.com.au</a></p>
           </div>
         </div>
         <div class="col-lg-6">
