Updated COVID message

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 
       <!-- Notice -->
       <div class="notice">
-        <p><b>We're open for pick up and drop off of frames from 10:00&endash;16:00 weekdays, in line with COVID-safe guidelines.</b></p>
-        <p><small>Thank you for your continued support of our local business.<small></p>
+        <p><b>We're open for pick up and drop off of picture frames from 10:00&ndash;16:00 weekdays.</b></p>
+        <p><small>We're adhering to COVID-safe guidelines. Contact us to see how we can help. Thank you for your support of our local business.<small></p>
       </div>
 
       <div class="collapse navbar-collapse" id="navbarExample">
