Added webp for thumbnails

--- a/index.html
+++ b/index.html
@@ -131,7 +131,11 @@
       <div class="row no-gutter popup-gallery">
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="framed artwork hanging off the wall">
+            <picture>
+              <source type="image/webp" srcset="img/portfolio/thumbnails/1.webp">
+              <source type="image/jpeg" srcset="img/portfolio/thumbnails/1.jpg">
+              <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="framed artwork hanging off the wall">
+            </picture>
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded"></div>
@@ -142,7 +146,11 @@
         </div>
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="img/portfolio/fullsize/2.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="photo with mat ready for framing">
+            <picture>
+              <source type="image/webp" srcset="img/portfolio/thumbnails/2.webp">
+              <source type="image/jpeg" srcset="img/portfolio/thumbnails/2.jpg">
+              <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="photo with mat ready for framing">
+            </picture>
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded"></div>
@@ -153,7 +161,11 @@
         </div>
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="img/portfolio/fullsize/3.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="framed landscape painting">
+            <picture>
+              <source type="image/webp" srcset="img/portfolio/thumbnails/3.webp">
+              <source type="image/jpeg" srcset="img/portfolio/thumbnails/3.jpg">
+              <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="framed landscape painting">
+            </picture>
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded"></div>
@@ -164,7 +176,11 @@
         </div>
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="img/portfolio/fullsize/4.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/4.jpg" alt="desert artwork">
+            <picture>
+              <source type="image/webp" srcset="img/portfolio/thumbnails/4.webp">
+              <source type="image/jpeg" srcset="img/portfolio/thumbnails/4.jpg">
+              <img class="img-fluid" src="img/portfolio/thumbnails/4.jpg" alt="desert artwork">
+            </picture>
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded"></div>
@@ -175,7 +191,11 @@
         </div>
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="img/portfolio/fullsize/5.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/5.jpg" alt="picture frame mouldings">
+            <picture>
+              <source type="image/webp" srcset="img/portfolio/thumbnails/5.webp">
+              <source type="image/jpeg" srcset="img/portfolio/thumbnails/5.jpg">
+              <img class="img-fluid" src="img/portfolio/thumbnails/5.jpg" alt="picture frame mouldings">
+            </picture>
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded"></div>
@@ -186,7 +206,11 @@
         </div>
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="img/portfolio/fullsize/6.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/6.jpg" alt="melbourne tram photo">
+            <picture>
+              <source type="image/webp" srcset="img/portfolio/thumbnails/6.webp">
+              <source type="image/jpeg" srcset="img/portfolio/thumbnails/6.jpg">
+              <img class="img-fluid" src="img/portfolio/thumbnails/6.jpg" alt="melbourne tram photo">
+            </picture>
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded"></div>
@@ -197,7 +221,11 @@
         </div>
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="img/portfolio/fullsize/7.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/7.jpg" alt="framed portrait of two women">
+            <picture>
+              <source type="image/webp" srcset="img/portfolio/thumbnails/7.webp">
+              <source type="image/jpeg" srcset="img/portfolio/thumbnails/7.jpg">
+              <img class="img-fluid" src="img/portfolio/thumbnails/7.jpg" alt="framed portrait of two women">
+            </picture>
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded"></div>
@@ -208,7 +236,11 @@
         </div>
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="img/portfolio/fullsize/8.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/8.jpg" alt="shop front window">
+            <picture>
+              <source type="image/webp" srcset="img/portfolio/thumbnails/8.webp">
+              <source type="image/jpeg" srcset="img/portfolio/thumbnails/8.jpg">
+              <img class="img-fluid" src="img/portfolio/thumbnails/8.jpg" alt="shop front window">
+            </picture>
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded"></div>
@@ -219,7 +251,11 @@
         </div>
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="img/portfolio/fullsize/9.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/9.jpg" alt="picture framer working">
+            <picture>
+              <source type="image/webp" srcset="img/portfolio/thumbnails/9.webp">
+              <source type="image/jpeg" srcset="img/portfolio/thumbnails/9.jpg">
+              <img class="img-fluid" src="img/portfolio/thumbnails/9.jpg" alt="picture framer working">
+            </picture>
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded"></div>
@@ -230,7 +266,11 @@
         </div>
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="img/portfolio/fullsize/10.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/10.jpg" alt="artwork to be framed">
+            <picture>
+              <source type="image/webp" srcset="img/portfolio/thumbnails/10.webp">
+              <source type="image/jpeg" srcset="img/portfolio/thumbnails/10.jpg">
+              <img class="img-fluid" src="img/portfolio/thumbnails/10.jpg" alt="artwork to be framed">
+            </picture>
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded"></div>
@@ -241,7 +281,11 @@
         </div>
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="img/portfolio/fullsize/11.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/11.jpg" alt="photo of elephant and newspaper masthead">
+            <picture>
+              <source type="image/webp" srcset="img/portfolio/thumbnails/11.webp">
+              <source type="image/jpeg" srcset="img/portfolio/thumbnails/11.jpg">
+              <img class="img-fluid" src="img/portfolio/thumbnails/11.jpg" alt="photo of elephant and newspaper masthead">
+            </picture>
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded"></div>
@@ -252,7 +296,11 @@
         </div>
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="img/portfolio/fullsize/12.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/12.jpg" alt="picture framing tools">
+            <picture>
+              <source type="image/webp" srcset="img/portfolio/thumbnails/12.webp">
+              <source type="image/jpeg" srcset="img/portfolio/thumbnails/12.jpg">
+              <img class="img-fluid" src="img/portfolio/thumbnails/12.jpg" alt="picture framing tools">
+            </picture>
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded"></div>
