--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="no-js">
 
 <head>
   <meta charset="utf-8">
@@ -15,9 +15,9 @@
   <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
 
   <!-- Custom fonts -->
-  <link rel=preload href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+  <link rel="preload" as="style" href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" onload="this.rel='stylesheet'">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic" rel="stylesheet" type="text/css">
 
   <!-- Stylesheet -->
   <link href="css/creative.min.css" rel="stylesheet">
@@ -31,6 +31,11 @@
     ga('create', 'UA-38957746-4', 'auto');
     ga('require', 'linkid');
     ga('send', 'pageview');
+  </script>
+
+  <!-- Javascript detection -->
+  <script>
+    document.documentElement.classList.remove("no-js");
   </script>
 </head>
 
@@ -379,6 +384,7 @@
 
   <!-- Custom scripts -->
   <script src="js/creative.min.js"></script>
+  <script src="js/modernizr.min.js"></script>
 
 </body>
 
