--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
     ga('send', 'pageview');
   </script>
 
-  <!-- Javascript detection -->
+  <!-- WebP detection -->
+  <script src="js/modernizr.min.js"></script>
   <script>
     document.documentElement.classList.remove("no-js");
   </script>
@@ -384,7 +385,6 @@
 
   <!-- Custom scripts -->
   <script src="js/creative.min.js"></script>
-  <script src="js/modernizr.min.js"></script>
 
 </body>
 
