Using webp images

--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
     ga('send', 'pageview');
   </script>
 
-  <!-- WebP detection -->
-  <script src="js/modernizr.min.js"></script>
+  <!-- Javascript detection -->
   <script>
     document.documentElement.classList.remove("no-js");
   </script>
@@ -385,6 +384,7 @@
 
   <!-- Custom scripts -->
   <script src="js/creative.min.js"></script>
+  <script src="js/modernizr.min.js"></script>
 
 </body>
 
