Using webp images

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 
       <!-- Notice -->
       <div class="notice">
-        <p><b>We're open for pick up and drop off of picture frames from 10:00&ndash;16:00 weekdays.</b></p>
-        <p><small>We're adhering to COVID-safe guidelines. Contact us to see how we can help. Thank you for your support of our local business.<small></p>
+        <p><b>We're now open for pick-up and drop-off from 10:00&ndash;16:00 weekdays.</b></p>
+        <p><small>In line with COVID Safe guidelines, please contact us to see how we can accommodate you. Thank you for your local support of our business.<small></p>
       </div>
 
       <div class="collapse navbar-collapse" id="navbarExample">
