Using webp images

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
             Saturday: 09:30&ndash;13:00</p>
             <p>Closed on public holidays</p>
 -->
-            <p><em>Temporary COVID opening hour changes</em></p>
+            <p><em>COVID trading hour changes</em></p>
             <p>Mon&ndash;Fri: 10:00&ndash;16:00<br>
             Saturday: Temporarily closed</p>
             <p>Closed on public holidays</p>
