Using webp images

--- a/index.html
+++ b/index.html
@@ -340,11 +340,13 @@
             Saturday: 09:30&ndash;13:00</p>
             <p>Closed on public holidays</p>
 -->
-            <p><em>COVID trading hour changes</em></p>
+            <p><strong>Trading hour changes due to COVID</strong></p>
             <p>Mon&ndash;Fri: 10:00&ndash;16:00<br>
             Saturday: Temporarily closed</p>
             <p>Closed on public holidays</p>
+
             <hr>
+
             <p><i class="fa fa-envelope"></i>&nbsp; <a href="mailto:hello@yarravillepictureframing.com.au">hello@yarravillepictureframing.com.au</a></p>
             <p><i class="fa fa-phone"></i>&nbsp; <a href="tel:+61393149554">+61 3 9314 9554</a></p>
             <p><i class="fa fa-facebook-square"></i>&nbsp; <a href="https://www.facebook.com/yarravillepictureframing/">@yarravillepictureframing</a></p>
