--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
   <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic" rel="stylesheet" type="text/css">
 
   <!-- Stylesheet -->
-  <script src="js/modernizr.min.js"></script>
   <link href="css/creative.min.css" rel="stylesheet">
 
   <!-- Google Analytics -->
@@ -387,6 +386,10 @@
 
   <!-- Custom scripts -->
   <script src="js/creative.min.js"></script>
+  <script src="js/modernizr.min.js"></script>
+  <script>
+    Modernizr.on('webp', function (result) {});
+  </script>
 
 </body>
 
