--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
 
       <!-- Notice -->
       <div class="notice">
-        <p><b>We're now open for pick-up and drop-off from 10:00&ndash;16:00 weekdays.</b></p>
-        <p><small>In line with COVID Safe guidelines, please contact us to see how we can accommodate you. Thank you for your local support of our business.<small></p>
+        <p><b>Our studio is open for pick-up and drop-off, with COVID Safe guidelines.</b></p>
       </div>
 
       <div class="collapse navbar-collapse" id="navbarExample">
@@ -334,14 +333,9 @@
           <div id="address">
             <p><i class="fa fa-map-marker fa-3x"></i></p>
             <p><a href="https://www.google.com/maps?f=d&daddr=Yarraville+Picture+Framing,+2%2F58+Anderson+St,+Yarraville+VIC+3013,+Australia" target="_blank">2/58 Anderson Street<br>Yarraville VIC 3013</a></p>
-<!--
+            <p><strong>Trading hours back to normal</strong></p>
             <p>Mon&ndash;Fri: 09:30&ndash;17:30<br>
             Saturday: 09:30&ndash;13:00</p>
-            <p>Closed on public holidays</p>
--->
-            <p><strong>Trading hour changes due to COVID</strong></p>
-            <p>Mon&ndash;Fri: 10:00&ndash;16:00<br>
-            Saturday: Temporarily closed</p>
             <p>Closed on public holidays</p>
 
             <hr>
