Update trading hours

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
       <!-- Notice -->
       <div class="notice">
-        <p><b>Our studio is open for pick-up and drop-off, under COVID Safe guidelines.</b></p>
+        <p><b>Our studio is now open for pick-up and drop-off, under COVID Safe guidelines.</b></p>
       </div>
 
       <div class="collapse navbar-collapse" id="navbarExample">
