Update trading hours

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
       <!-- Notice -->
       <div class="notice">
-        <p><b>Our studio is now open for pick-up and drop-off, under COVID Safe guidelines.</b></p>
+        <p><b>We're back! Come visit us today (we're working COVID safe).</b></p>
       </div>
 
       <div class="collapse navbar-collapse" id="navbarExample">
@@ -80,7 +80,7 @@
         <p>We are Melbourne&#8217;s specialist framers serving the community for over 25 years.</p>
         <p>Offering a comprehensive variety of frames and professional consultation for any framing project, including prints, photos, canvas, memorabilia items, and more.</p>
         <p>Visit us for a professional consultation on how to best frame and protect your work.</p>
-        <a class="btn btn-primary btn-xl" href="#contact">Opening Hours</a>
+        <a class="btn btn-primary btn-xl" href="#contact">Get a quote</a>
       </div>
     </div>
   </header>
@@ -333,9 +333,9 @@
           <div id="address">
             <p><i class="fa fa-map-marker fa-3x"></i></p>
             <p><a href="https://www.google.com/maps?f=d&daddr=Yarraville+Picture+Framing,+2%2F58+Anderson+St,+Yarraville+VIC+3013,+Australia" target="_blank">2/58 Anderson Street<br>Yarraville VIC 3013</a></p>
-            <p><strong>Trading hours back to normal</strong></p>
+            <p><strong>We're now open until 3pm on Saturdays!</strong></p>
             <p>Mon&ndash;Fri: 09:30&ndash;17:30<br>
-            Saturday: 09:30&ndash;13:00</p>
+            Saturday: 09:30&ndash;15:00</p>
             <p>Closed on public holidays</p>
 
             <hr>
