--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <div class="header-content">
       <div class="header-content-inner">
         <h1 id="homeHeading">Yarraville&#8217;s <span class="avoid-wrap">Custom Framing</span></h1>
-        <p>We are Melbourne&#8217;s specialist framers serving the community for over 25 years.</p>
+        <p>We are Melbourne&#8217;s specialist framers serving the community for over 30 years.</p>
         <p>Offering a comprehensive variety of frames and professional consultation for any framing project, including prints, photos, canvas, memorabilia items, and more.</p>
         <p>Visit us for a professional consultation on how to best frame and protect your work.</p>
         <a class="btn btn-primary btn-xl" href="#contact">Get a quote</a>
@@ -115,7 +115,7 @@
           <div class="service-box">
             <i class="fa fa-4x fa-heart text-primary sr-icons"></i>
             <h3>Framed with Love</h3>
-            <p class="text-muted">With over 25 years of experience, we will aid you your choice of frame to ensure it will best complement your artwork.</p>
+            <p class="text-muted">With over 30 years of experience, we will aid you your choice of frame to ensure it will best complement your artwork.</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
@@ -323,7 +323,7 @@
       <div class="row">
         <div class="col-lg-10 offset-lg-1 text-center">
           <h2 class="section-heading">Contact Us</h2>
-          <p>We'd be delighted to give you a free quote and professional advice for any project from repairs to how to present your artwork.</p>
+          <p>We'd be delighted to give you a free quote and professional advice for any project from restoration and repairs to how to best present and protect your artwork.</p>
         </div>
       </div>
     </div>
@@ -333,16 +333,17 @@
           <div id="address">
             <p><i class="fa fa-map-marker fa-3x"></i></p>
             <p><a href="https://www.google.com/maps?f=d&daddr=Yarraville+Picture+Framing,+2%2F58+Anderson+St,+Yarraville+VIC+3013,+Australia" target="_blank">2/58 Anderson Street<br>Yarraville VIC 3013</a></p>
-            <p><strong>We're now open until 3pm on Saturdays!</strong></p>
             <p>Mon&ndash;Fri: 09:30&ndash;17:30<br>
             Saturday: 09:30&ndash;15:00</p>
+            
+            <p><strong>(Now until 3pm on Saturdays!)</em></p>
             <p>Closed on public holidays</p>
 
             <hr>
 
+            <p><strong>Quotes and questions?</strong></p>
             <p><i class="fa fa-envelope"></i>&nbsp; <a href="mailto:hello@yarravillepictureframing.com.au">hello@yarravillepictureframing.com.au</a></p>
             <p><i class="fa fa-phone"></i>&nbsp; <a href="tel:+61393149554">+61 3 9314 9554</a></p>
-            <p><i class="fa fa-facebook-square"></i>&nbsp; <a href="https://www.facebook.com/yarravillepictureframing/">@yarravillepictureframing</a></p>
           </div>
         </div>
         <div class="col-lg-6">
