--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
             <p>Mon&ndash;Fri: 09:30&ndash;17:30<br>
             Saturday: 09:30&ndash;15:00</p>
             
-            <p><strong>(Now until 3pm on Saturdays!)</em></p>
+            <p><strong>(Now until 3pm on Saturdays!)</strong></p>
             <p>Closed on public holidays</p>
 
             <hr>
